<resources>
    <string name="app_name">Ganesh Management</string>
    <string name="enter_admin_mobile_number">Enter Admin Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="arranging_anxiety">Arranging Anxiety</string>
    <string name="carrying_balloon">Carrying Balloon</string>
    <string name="carrying_bubble">Carrying Bubble</string>
    <string name="player_name">Player Name</string>
    <string name="father_name">Father Name</string>
    <string name="logout">Logout</string>
    <string name="total_registered_players_list">Total Registered Players List</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="total">Total :-</string>
    <string name="games_list">Games List</string>
    <string name="about_application">about application</string>
</resources>
