<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".GamesListActivity">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/games_list"
                android:gravity="center"
                android:textSize="35sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"/>
            <Button
                android:layout_marginTop="60dp"
                android:text="@string/arranging_anxiety"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:id="@+id/buttonAnxiety"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/carrying_balloon"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:id="@+id/buttonBalloon"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/carrying_bubble"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:id="@+id/buttonBubble"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>