<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:gravity="center"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/admin_login"

                        android:textColor="#4A8CF7"
                        android:textSize="35sp"
                        android:gravity="center"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="60dp"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/enter_admin_mobile_number"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:inputType="phone"
                            android:id="@+id/textInputEditTextPhone"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/enter_password"
                        app:passwordToggleEnabled="true"
                        android:textColorHint="@color/colorPrimary"
                        app:passwordToggleTint="@color/colorPrimary"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"
                            android:id="@+id/textInputEditTextPassword"/>
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/buttonLogin"
                        android:background="#4A8CF7"
                        android:textColor="#ffffff"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/login"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>



</LinearLayout>