<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:id="@+id/cardView"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1.2"
                        android:textSize="@dimen/dimen_18sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/player_name"/>
                    <TextView
                        android:layout_weight="1"
                        android:textSize="@dimen/dimen_15sp"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/textViewPlayerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="@dimen/dimen_18sp"
                        android:layout_weight="1.2"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/father_name"/>
                    <TextView
                        android:textSize="@dimen/dimen_15sp"
                        android:layout_weight="1"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/textViewFatherName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1.2"
                        android:textSize="@dimen/dimen_18sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_number"/>
                    <TextView
                        android:layout_weight="1"
                        android:textSize="@dimen/dimen_15sp"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/textViewMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</LinearLayout>